--- a/platformio.ini
+++ b/platformio.ini
@@ -16,3 +16,4 @@ lib_deps =
 	links2004/WebSockets@^2.3.7
 	bblanchon/ArduinoJson@^6.20.0
 upload_speed=921600
+monitor_filters = esp8266_exception_decoder
